# PocketOPDS

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.ps1  build.sh  toolchain-arm.cmake
src/: app.h  config.c  config.h  main.c  net.c  net.h  opds.c  opds.h  screen_catalog.c  screen_detail.c  screen_servers.c
